[tool.poetry]
name = "greyhounds"
version = "0.1.2"
description = ""
authors = ["Miron Barykin <barykinmiron@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord = "^2.2.2"
uuid = "^1.30"
datetime = "^5.1"
mysql-connector-python = "^8.0.32"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
  